# autotools-cxx

./: .gitignore  Makefile.am  README.md  configure.ac
.github/workflows/: linux-cpp.yml  linux-debian.yml  linux-ubuntu.yml  linux.yml  macos.yml  windows-msys2.yml  windows.yml
src/: Makefile.am
